src/css/index.css
/* ------------ todo  ----------- */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  
}

body {
  position: relative;

  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

section {
  display: flex;
  justify-content: center;
}

footer {
  display: flex;
  justify-content: center;
}

.content {
  width: 80%;
  height: auto;
}
/* ------------ header ----------- */
.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

/* ------------ menu ----------- */
header{
  background: #fff;
  z-index: 999;
} 

nav {
  height: 80px;
  width: 100%;
  margin-left: auto;
  margin-right: auto;

}
nav .logo {
  padding: 0.4rem;
}

nav ul {
  float: right;
  margin-right: 20px;
}

nav ul li {
  display: inline-block;
  line-height: 80px;
  margin: 0 5px;

}

nav ul li a{
  color: #ccc;
  padding: 7px 13px;
  border-radius: 3px;
}

a:active, a:hover{
  transition: .5s;
  color: #333 ;
}

.checkbtn {
  float: right;
  line-height: 80px;
  width: 30px;
  cursor: pointer;
  display: none;
}

#check {
  display: none;
}

@media (max-width:952px){
  .checkbtn {
    display: block;
  }
  ul{
    position: fixed;
    width: 100%;
    height: 100vh;
    background-color: #2780ac;
    top: 80px;
    left: -100%;
    text-align: center;
    transition: all .5s;
    opacity: 0.9;
  }

  nav ul li {
    display: block;
    margin: 50px 0;
    line-height: 30px;
  }

  nav ul li a {
    font-size: 20px;
  }

  a:hover, a:active{
    background: none;
    color: #fff;
  }

  #check:checked~ul{
    left: 0;
  }

}

/* ------------ images ----------- */
.container-logo {
  margin: 1em;
}
.logo {
  max-width: 120px;
  max-height: 80px;
}

.school-image {
  max-width: 100%;
  max-height: 400px;
  min-width: 160px;
  margin: 1rem;
}

.title-image {
  max-width: 100%;
}

/* ------------ Cards ----------- */

.card {
  width: 100%;
  height: auto;
  margin: 2rem;
  border-radius: 1rem;
  box-shadow: 2px 5px 2px #cccc;
  -webkit-box-shadow: 2px 5px 2px #cccc;
  -moz-box-shadow: 2px 2px 2px #cccccc;
  background-color: #fff;
}

/* -------- row and columns alinhamentos ----------- */
.row {
  display: flex;
  flex-direction: row;
}

.row-center {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.row-vertical-align {
  display: flex;
  align-items: center;
}

.row-horizontal-space-evenly {
  display: flex;
  justify-content: space-evenly;
}

.row-horizontal-space-between {
  display: flex;
  justify-content: space-between;
}

.wrapper {
  flex-wrap: wrap;
  transition: .5s;
}

.col {
  display: flex;
  flex-direction: column;
}

/* ---------------------------------- */

.circle {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
  border-radius: 50px;
  background-color: #2989b7;
}

/* ------------ svgs icons ----------- */
.icon-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 70px;
  height: 70px;
  border-radius: 70px;
  background-color: #ff6a6a;
}

.icon2-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 100px;
}

.icon-card {
  width: 60%;
}

/* borders */

.linear-border {
  width: 100%;
  height: 0.08rem;
  background-color: #fff;
}

/* Estilização dos alinhamentos */

.size {
  max-width: 420px;
  max-height: 240px;
}

.spacing {
  margin-left: 0.9rem;
}

/* Estilização dos textos */

.content-title {
  display: flex;
  justify-content: center;
  padding: 2.5rem;
}

.content-title h2 {
  text-transform: uppercase;
}

.text {
  letter-spacing: normal;
  line-height: 2.2rem;
  text-indent: 1.5rem;
  text-align: justify;
}

.paragraph {
  margin-left: 3.2rem;
  margin-top: 0;
  letter-spacing: normal;
  line-height: 2rem;
  text-align: justify;
}

.normal-text {
  letter-spacing: normal;
}

.thin-text {
  font-weight: lighter;
}

.bold-text {
  font-weight: bold;
}

.align-center {
  text-align: center;
}

.color-light {
  color: #fff;
}

.color-dark {
  color: #666363;
}

.color-title {
  color: #194357;
}

.color-default {
  color: #b5b1b1;
}

.color-default-light {
  color: #cecece;
}

.size1 {
  font-size: clamp(3rem, 3vw, 6rem);
}

.size2 {
  font-size: clamp(2rem, 2vw, 4rem);
}

.size3 {
  font-size: clamp(1.2rem, 2vw, 1.6rem);
}

.size4 {
  font-size: clamp(1.2rem, 2vw, 1.3rem);
}

.size5 {
  font-size: clamp(0.8rem, 2vw, 0.8rem);
}

/* ------------ Seção 1 ----------- */
.section-one {
  align-items: center;
  height: 100vh;
}

.section-one .col {
  max-width: 560px;
  width: 100%;
}

.button {
  display: flex;
  background-color: #117caf;
  margin-top: 2.6rem;
  padding: 0.9rem 2rem ;
  justify-content: center;
  border-radius: 0.4rem;
}

.button:hover {
  transition: 300ms ease-out;
  background-color: #0a4a69;
}

/* verificar se é a melhor solução para alinhar */



/* ------------ Seção 2 ----------- */

.section-two {
  background-color: #f5f5f5;
}
.section-two .row-center {
  justify-content: space-evenly;
}
.section-two .card {
  height: auto;
  margin: 0;
  padding-top: 1.6rem;
  padding-bottom: 1.6rem;
  margin-top: 2.6rem;
  margin-bottom: 2.6rem;
}
.section-two .row {
  justify-content: space-evenly;
}
.section-two .col {
  max-width: 400px;
  width: 100%;
}
.section-two p {
  width: 100%;
  text-align: center;
}
.section-two .content-title {
  margin-top: 0.4rem;
}

.section-two .card .row .col {
  max-width: 140px;
  justify-content: center;
  align-items: center;
  margin-top: 2rem;
}

.section-two .circle {
  margin: 1.2rem;
}
/* ------------ Seção 4 ----------- */

.section-four {
  background-color: #f5f5f5;
}

.section-four .card {
  height: 280px;
  padding-top: 0 ;
  margin: 1.2rem;

}

/* ------------ Seção 5 ----------- */

.section-five {
  background-color: #2780ac;
}

.section-five .col {
  align-items: center;
  justify-content: space-evenly;
  height: auto;
}

.safe-col {
  display: flex;
  justify-content: center;
  max-width: 340px;
  width: 100%;
}

.section-five .safe-col {
  margin: 2rem;
}
.section-five .content-title {
  width: 100%;
  justify-content: center;
  align-items: center;
}

.section-five .normal-text {
  line-height: 2rem;
}

.section-five .row .col {
  width: 100%;
  align-items: flex-start;
}

.section-five .row {
  padding-bottom: 5rem;
}

.section-five .circle {
  background-color: #fff;
  margin: 2rem;
  width: 150px;
  height: 150px;
  border-radius: 150px;
}
/* ------------ footer section ----------- */

.footer-section {
  display: flex;
  width: 100%;
  justify-content: center;
}

.footer-section img {
  width: 40%;
}

.footer-section img {
  width: 40%;
  max-width: 340px;
  margin: 4rem;
}

.footer-section .col {
  max-width: 400px;
  max-height: 240px;
  align-items: center;
  justify-content: space-evenly;
  margin: 2rem;
}

.footer-section .row-horizontal-space-between {
  justify-content: center;
}

.footer-section .linear-border {
  background-color: #cccccc;
}

/* ------------ slider ----------- */

.section-carousel {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  height: 48vw;
  max-height: 100%;
  position: absolute;
  z-index: 1;
}

#carousel {
  width: 100%;
  height: 48vw;
  max-height: 100%;
  position: relative;
}

#carousel img {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
  object-fit: cover;
  transition: opacity 800ms ease-out;
}

#carousel img.selected {
  opacity: 1;
}

